5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1811_2564.log
== TEST (2019-06-06 19:16:07) 
-- CODE:
from numpy import*
gols=array(eval(input("gols: ")))
adv=array(eval(input("adversario: ")))
x=zeros(3, dtype=int)
for i in range (size(gols)):
	if(gols[i]>adv[i]):
		x[0]=x[0]+1
	if(gols[i]<adv[i]):
		x[2]=x[2]+1
	if(gols[i]=adv[i]):
		x[1]=x[1]+1


print(x)

-- ERROR:
File "XXXX", line 10
    if(gols[i]=adv[i]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:16:33) 
-- CODE:
from numpy import*
gols=array(eval(input("gols: ")))
adv=array(eval(input("adversario: ")))
x=zeros(3, dtype=int)
for i in range (size(gols)):
	if(gols[i]>adv[i]):
		x[0]=x[0]+1
	if(gols[i]<adv[i]):
		x[2]=x[2]+1
	if(gols[i]==adv[i]):
		x[1]=x[1]+1


print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:17:28) 
-- CODE:
from numpy import*
gols=array(eval(input("gols: ")))
adv=array(eval(input("adversario: ")))
x=zeros(3, dtype=int)
for i in range (size(gols)):
	if(gols[i]>adv[i]):
		x[0]=x[0]+1
	if(gols[i]<adv[i]):
		x[2]=x[2]+1
	if(gols[i]==adv[i]):
		x[1]=x[1]+1


print(x)

-- EXECUTION TIME:
1.01183
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
